--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-redux": "^7.1.7",
-    "cross-env": "^7.0.2",
-    "react-scripts": "^3.4.1",
     "@types/react-router-dom": "^4.3.5",
+    "cross-env": "^7.0.2",
+    "json-server": "^0.16.1",
+    "react-scripts": "^3.4.1",
     "typescript": "latest"
   },
   "browserslist": {
