--- a/package.json
+++ b/package.json
@@ -1,39 +1,55 @@
 {
-  "name": "create-react-app-with-typescript",
-  "version": "4.0.0",
+  "name": "cra-mui-ts-generator",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.5.0",
-    "@material-ui/core": "^4.9.9",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/pickers": "^3.2.10",
-    "@types/yup": "^0.26.35",
-    "await-to-js": "^2.1.1",
-    "date-fns": "^2.12.0",
-    "formik": "^1.5.8",
-    "query-string": "^6.12.0",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-redux": "^7.2.0",
+    "@date-io/date-fns": "^2.11.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.20",
+    "@types/react-dom": "^17.0.9",
+    "await-to-js": "^3.0.0",
+    "date-fns": "^2.23.0",
+    "formik": "^2.2.9",
+    "query-string": "^7.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-thunk": "^1.0.0",
     "redux-thunk": "^2.3.0",
-    "react-router-dom": "^5.0.1",
-    "yup": "^0.28.3"
+    "typescript": "^4.3.5",
+    "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "PORT=9000 REACT_APP_STAGE=development react-scripts start",
-    "build": "cross-env NODE_PATH=src/ GENERATE_SOURCEMAP=false react-scripts --max_old_space_size=4096 build",
+    "lint": "eslint --fix . && echo 'Lint complete.'",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^4.3.5",
-    "cross-env": "^7.0.2",
-    "json-server": "^0.16.1",
-    "react-scripts": "^3.4.1",
-    "typescript": "latest"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "browserslist": {
     "production": [
@@ -46,5 +62,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2"
   }
 }
