--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "lint": "eslint --fix . && echo 'Lint complete.'",
+    "prepare": "husky install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pre-commit": "lint-staged"
   },
   "eslintConfig": {
     "extends": [
@@ -40,15 +41,13 @@
       "react-app/jest"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.{ts,tsx}": [
+    "src/**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "git add"
+      "eslint --fix"
+    ],
+    "src/**/*.{css}": [
+      "eslint --fix"
     ]
   },
   "browserslist": {
@@ -68,8 +67,6 @@
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.1",
